Bugfix: Header template part alignment and padding.

--- a/assets/src/sass/4-layout/_header.scss
+++ b/assets/src/sass/4-layout/_header.scss
@@ -1,7 +1,8 @@
 .site-header {
 	position: relative;
 
-	.header-content {
+	.header-content,
+	&__content {
 		display: flex;
 		align-items: center;
 		align-content: stretch;
@@ -76,6 +77,7 @@
 	}
 
 	//Header Dark
+	.site-header__wrap,
 	.site-header-wrap {
 
 		&.header-dark {
